ttools: jel.Constant now has a parameterised type
Now Constant<T> which tidies things up a bit.